Fixed a error regarding projects not showing up in grid of projects.

--- a/createdby/src/Components/SidebarMenu/TopSidebarMenu.css
+++ b/createdby/src/Components/SidebarMenu/TopSidebarMenu.css
@@ -17,6 +17,6 @@
 }
 h4{
     margin:0;
-    padding:5px;
+    padding:15px;
     text-decoration: underline;
 }
